# CXX-external-libs-examples

./: .clang-format  .gitignore  CMakeLists.txt  example.txt  mpiExample.cpp  netcdf4Read.cpp  netcdf4Read.h  netcdf4Write.cpp  plotting.ipynb  vec_test.cpp
